# Ronna_medical_G6_urdf_rviz_gazebo

./: README.md
src/my_robot_description/: CMakeLists.txt  package.xml
src/my_robot_description/DOCUMENT/: File with code-s and info  INFO  Inertial_for_urdf.txt  inertial_compute.py  inertial_compute_try.py
src/my_robot_description/collision/: README.txt
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/meshes/: adapter.stl  camera_tool_rev0.stl  drive_wheel.stl  drive_wheell.stl  guide_tool.stl  ommni_suport_wheel.stl  ommni_suport_wheell.stl  platform.stl  robot_base.stl  robot_link_1.stl  robot_link_2.stl  robot_link_3.stl  robot_link_4.stl  robot_link_5.stl  robot_link_6.stl  robot_link_7.stl  service_cover.stl
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: Moveit_robot.urdf  predlozak.urdf  ronna_K1.urdf.xacro  ronna_K1_mobilna.urdf.xacro  ronna_K1_mobilna_gazebo.xacro  ronna_K1_robot.urdf.xacro  ronna_K1_robot_gazebo.xacro  ronna_common_properties.xacro
src/robot_description_vjezba/: CMakeLists.txt  package.xml
src/robot_description_vjezba/launch/: display.launch.py  display.launch.xml
src/robot_description_vjezba/urdf/: predlozak.urdf  robot.urdf  robot.urdf.xacro  robot_common_properties.xacro  robot_gazebo.xacro  (+1 more)
src/ronna_bringup/: CMakeLists.txt  package.xml
src/ronna_bringup/launch/: ronna_gazebo_launch.xml
src/ronna_bringup/rviz/: urdf_config.rviz
src/ronna_bringup/worlds/: tu_se_sprema_gazebo_world.txt
src/vjezba_bringup/: CMakeLists.txt  package.xml
(+1 files in other folders)
